samples/_failures_safe/1761191595_9b79e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fc5e42a.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_9fc5e42a.c:162:13: error: expected declaration or statement at end of input
  162 |             lexer->column++;
      |             ^~~~~
./samples/SAFE/__tmp_9fc5e42a.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9fc5e42a.c:162:13: error: expected declaration or statement at end of input
